@@ -1,7 +1,5 @@
 package io.dropwizard.jersey.validation;
 
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
 import org.glassfish.jersey.server.model.Invocable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,7 +8,9 @@ import javax.validation.ConstraintViolation;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.ext.ExceptionMapper;
 import javax.ws.rs.ext.Provider;
+import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Provider
 public class JerseyViolationExceptionMapper implements ExceptionMapper<JerseyViolationException> {
@@ -23,8 +23,9 @@ public class JerseyViolationExceptionMapper implements ExceptionMapper<JerseyVio
 
         final Set<ConstraintViolation<?>> violations = exception.getConstraintViolations();
         final Invocable invocable = exception.getInvocable();
-        final ImmutableList<String> errors = FluentIterable.from(exception.getConstraintViolations())
-                .transform(violation -> ConstraintMessage.getMessage(violation, invocable)).toList();
+        final List<String> errors = exception.getConstraintViolations().stream()
+                .map(violation -> ConstraintMessage.getMessage(violation, invocable))
+                .collect(Collectors.toList());
 
         final int status = ConstraintMessage.determineStatus(violations, invocable);
         return Response.status(status)
